test/files/pos/t5165b/TestObject_3.scala
// scalac: -Werror
object TestObject extends TestTrait

